framework/contracts/account/tests/snapshots/subaccount__proxy_updating_on_subaccount_should_succeed.snap
---
source: contracts/account/tests/subaccount.rs
expression: all_storage
---
"abstract:account-local-0":
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":0}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":{\"Monarchy\":{\"monarch\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:account-local-1":
  - - "\u0000\u0002ae\u0000\u0000\u0000\u0002"
    - "{}"
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":1}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":{\"Monarchy\":{\"monarch\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:account-local-2":
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"My subaccount\",\"description\":\"new desc\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":2}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":{\"SubAccount\":{\"account\":\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ans-host":
  - - be
    - "[]"
  - - cfg
    - "{\"next_unique_pool_id\":1}"
  - - contract_info
    - "{\"contract\":\"abstract:ans-host\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-client":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-client\",\"version\":\"0.23.0\"}"
  - - mod
    - "{\"module\":\"abstract:ibc-client\",\"version\":\"0.23.0\",\"dependencies\":[],\"metadata\":null}"
  - - ownership
    - "{\"owner\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-host":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-host\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:module-factory":
  - - contract_info
    - "{\"contract\":\"abstract:module-factory\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:version-control":
  - - "\u0000\u0002cb\u0000\babstract\u0000\u0007account0.23.0"
    - "{\"account\":5}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bans-host0.23.0"
    - "{\"native\":\"mock1pzf4rfa8ly8y306c2zxm9ka4hegpv9c4tsffcxejc3mz4jkcac4qkernmj\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bibc-host0.23.0"
    - "{\"native\":\"mock1dtw8lua8qpav6x3sngqwd3xqmyvg5q0pnv2lkmajzk0rjkjetm2s2pyq4n\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\nibc-client0.23.0"
    - "{\"native\":\"mock1l487rfqw2yevhvh4c3dw706mdy9u703zsawq7xt4h9e0h9up9fgqwk620q\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000emodule-factory0.23.0"
    - "{\"native\":\"mock1wzrl9hf8xukhu7ukx5quted5m5c2vklmr70tg88a0zkduts7f0sqpr58lc\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000fversion-control0.23.0"
    - "{\"native\":\"mock1tnv2hfx6gqdtelccc57aru3ju8wlff8pslrsfdqn862qjc69gsas0vscja\"}"
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"mock1ys8clus4qf2haemyck0uljz74dj2k8hu4ggfpe7vty6zd5j2982q9sf90k\""
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0001"
    - "\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\""
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0002"
    - "\"mock1zrcvn33rptsj7t6hacjrhuekqplf8eagqs3dg7m9vqqrhnyaxtxsa9tlkx\""
  - - "\u0000\u0005nmspcabstract"
    - "{\"trace\":\"local\",\"seq\":0}"
  - - "\u0000\u0007nmspc_a\u0000\u0005local\u0000\u0004\u0000\u0000\u0000\u0000abstract"
    - "8"
  - - cfg
    - "{\"security_disabled\":true,\"namespace_registration_fee\":null}"
  - - ci
    - "3"
  - - contract_info
    - "{\"contract\":\"abstract:version-control\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock14cl2dthqamgucg9sfvv4relp3aa83e40yfzzc8\",\"pending_owner\":null,\"pending_expiry\":null}"
