framework/contracts/account/tests/snapshots/subaccount__updating_on_subaccount_should_succeed.snap
---
source: contracts/account/tests/subaccount.rs
expression: all_storage
---
"abstract:account-local-0":
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":0}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.24.2\"}"
  - - ownership
    - "{\"owner\":{\"monarchy\":{\"monarch\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:account-local-1":
  - - "\u0000\u0002ae\u0000\u0000\u0000\u0002"
    - "{}"
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\",\"description\":\"new desc\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":1}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.24.2\"}"
  - - ownership
    - "{\"owner\":{\"monarchy\":{\"monarch\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:account-local-2":
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"My subaccount\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":2}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.24.2\"}"
  - - ownership
    - "{\"owner\":{\"sub_account\":{\"account\":\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ans-host":
  - - be
    - "[]"
  - - cfg
    - "{\"next_unique_pool_id\":1}"
  - - contract_info
    - "{\"contract\":\"abstract:ans-host\",\"version\":\"0.24.2\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-client":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-client\",\"version\":\"0.24.1\"}"
  - - mod
    - "{\"module\":\"abstract:ibc-client\",\"version\":\"0.24.1\",\"dependencies\":[],\"metadata\":null}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-host":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-host\",\"version\":\"0.24.1\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:module-factory":
  - - contract_info
    - "{\"contract\":\"abstract:module-factory\",\"version\":\"0.24.1\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:registry":
  - - "\u0000\u0002cb\u0000\babstract\u0000\u0007account0.24.2"
    - "{\"account\":5}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bans-host0.24.2"
    - "{\"native\":\"mock1awvrj8fm7khxxfllk06hqehrh6kg4m2wakt9x5w4zjmpwrgjx02snv3vdy\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bibc-host0.24.1"
    - "{\"native\":\"mock1aaf9r6s7nxhysuegqrxv0wpm27ypyv4886medd3mrkrw6t4yfcns7ctvz5\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bregistry0.24.3"
    - "{\"native\":\"mock1h9wzw84sqsmkylh43j64wdduww9l7xdznfptkqe3e0ytf3vx9h7quplk0z\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\nibc-client0.24.1"
    - "{\"native\":\"mock16jzpxp0e8550c9aht6q9svcux30vtyyyyxv5w2l2djjra46580wsgtnl4n\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000emodule-factory0.24.1"
    - "{\"native\":\"mock1lhx5jj47nwa64t4465szhxmdrehffpu8t5jjvhkat7yyqjtajdcszw3kpq\"}"
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"mock15n6av559ra8s98xgfnhc23d7vzr207q2j2m7cht5hrchw9mjc09qag5hf6\""
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0001"
    - "\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\""
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0002"
    - "\"mock1zrcvn33rptsj7t6hacjrhuekqplf8eagqs3dg7m9vqqrhnyaxtxsa9tlkx\""
  - - "\u0000\u0002cjabstract"
    - "{\"trace\":\"local\",\"seq\":0}"
  - - "\u0000\u0002ck\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"abstract\""
  - - cfg
    - "{\"security_enabled\":false,\"namespace_registration_fee\":null}"
  - - ci
    - "3"
  - - contract_info
    - "{\"contract\":\"abstract:registry\",\"version\":\"0.24.3\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
